# BasicDaisy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
src/SList/: SList.c  SList.h  SharedTypes.h
src/app/: main.cpp
src/per/: gpio.cpp  gpio.h  rng.cpp  rng.h  sai.cpp  sai.h  sdram.cpp  tim.cpp  tim.h
src/sys/: daisy_core.h  daisy_seed.cpp  daisy_seed.h  dma.c  fatfs.cpp  fatfs.h  system.cpp  system.h
test/: CMakeLists.txt
test/HelloWorld/: helloworld.cpp
test/SList/: SList-ut.cpp
